[gd_scene format=3 uid="uid://vb88icyv4agh"]

[ext_resource type="Script" uid="uid://cjwngsl1mrwex" path="res://vmarket_game/shipping_address.gd" id="1_ele3p"]
[ext_resource type="Texture2D" uid="uid://dus1dus681mxo" path="res://vmarket_game/map/ของตกแต่ง/Gemini_Generated_Image_6bsbq26bsbq26bsb.png" id="2_7j2jn"]
[ext_resource type="Texture2D" uid="uid://chb1i430on2fb" path="res://vmarket_game/image/Pokecut_1768163041145.png" id="2_qw60h"]
[ext_resource type="Texture2D" uid="uid://b7rlciysfwuxd" path="res://vmarket_game/map/UI/Pokecut_1770020736309.png" id="4_7j2jn"]

[node name="Shipping_address" type="Control" unique_id=1622568055]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -3.0
offset_right = -36.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ele3p")
metadata/_edit_lock_ = true

[node name="GeminiGeneratedImage6Bsbq26Bsbq26Bsb" type="Sprite2D" parent="." unique_id=961525674]
position = Vector2(1067, 587)
scale = Vector2(3.2076938, 1.7202064)
texture = ExtResource("2_7j2jn")

[node name="Pokecut1768163041145" type="Sprite2D" parent="." unique_id=1135568359]
position = Vector2(997, 516)
scale = Vector2(1.4663723, 1.3948864)
texture = ExtResource("2_qw60h")

[node name="Pokecut1770020736309" type="Sprite2D" parent="." unique_id=1567289377]
position = Vector2(1691, 164)
scale = Vector2(0.15, 0.13)
texture = ExtResource("4_7j2jn")

[node name="Image" type="TextureRect" parent="." unique_id=935924721]
layout_mode = 0
offset_left = 333.0
offset_top = 121.0
offset_right = 737.0
offset_bottom = 481.0

[node name="DetailImage" type="TextureRect" parent="." unique_id=2103353939]
layout_mode = 0
offset_left = 922.0
offset_top = 561.0
offset_right = 1240.0
offset_bottom = 890.0

[node name="NameLabel" type="Label" parent="." unique_id=670584300]
layout_mode = 0
offset_left = 327.0
offset_top = 523.0
offset_right = 903.0
offset_bottom = 840.0
theme_override_font_sizes/font_size = 50
text = "ชื่อ"

[node name="PriceLabel" type="Label" parent="." unique_id=919240963]
layout_mode = 0
offset_left = 687.0
offset_top = 690.0
offset_right = 914.0
offset_bottom = 894.0

[node name="DescLabel" type="Label" parent="." unique_id=1874967632]
layout_mode = 0
offset_left = 1226.0
offset_top = 359.0
offset_right = 1461.0
offset_bottom = 557.0
